# crpaGNSS

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml
charlizard/: __init__.py
charlizard/algorithms/: __init__.py  phd.py
charlizard/estimators/: discriminator.py  lock_detectors.py  ls.py  phd.py
charlizard/models/: __init__.py  bpsk_correlator.py  correlators.py  crpa_gain_pattern.py  discriminator.py  lock_detectors.py
charlizard/navigators/: __init__.py  crpa_imu_gnss.py  crpa_imu_gnss_ecef.py  gnss_ins.py  soop_ins.py  structures.py  vector_processing.py  vt.py
charlizard/plotting/: crpa_plots.py  geoplot.py  plot_window.py  skyplot.py
charlizard/utils/: combinations.py
configs/: deep_couple_sim.yaml  gnss+_sim.yaml  soop_ins_sim.yaml  vt_correlator_sim.yaml
data/: deval_drive_50Hz.csv  imu_pacific_pnt.csv  imu_test.csv  multiple_traj.xlsx
data/gnss+_2024/: dynamic.csv  imu_devall_drive.csv  static.csv  test.csv
data/mtt/: dynamic_data.xlsx
scripts/: crpa_attitude.py  crpa_beamstear_visual.py  deep_couple_sim copy.py  deep_couple_sim.py  imu_stuff.py  monte_carlo_sim.py  simulate_gnss_ins.py  simulate_soop_ins.py  test.py  vt_correlator_sim.py
scripts/crpa/: crpa_attitude.py  crpa_attitude_test.ipynb  crpa_beamstear_visual.py  crpa_least_mean_square.py  crpa_music.py
scripts/gnss+_2024/: attitude_ls.ipynb  compile_mc_results.py  generate_traj_data.py  kalman_matrices.ipynb  monte_carlo_sim.py  plot_results.py  simulate_rcvr.py
scripts/mtt/: phd_filter_sim.py  plot_mtt_results.py  test_pf_visualization.py
scripts/pacific_pnt_2024/: doppler_pos.ipynb  monte_carlo_sim.py  plot_heatmap.py  plot_monte_carlo_results.py  simulate_soop_ins.py
scripts/tests/: crpa_beamstear_visual.py  test_ls.py
