[tool.poetry]
name = "charlizard"
version = "0.0.1"
description = ""
authors = ["Daniel Sturdivant <sturdivant20@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.3"
scipy = "^1.12.0"
numba = "^0.58.1"
pandas = "^2.1.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
navsim = {path = "libs/navsim", develop = true}
log-utils = {path = "libs/log_utils", develop = true}
yaml-parser = {path = "libs/yaml_parser", develop = true}

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
