[tool.poetry]
name = "charlizard"
version = "0.0.1"
description = ""
authors = ["Daniel Sturdivant <sturdivant20@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
basemap = "^1.4.1"
chalk-planar = { git = "git@github.com:chalk-diagrams/planar.git" }
cartopy = "^0.23.0"
h5py = "^3.11.0"
laika = { path = "libs/laika", develop = true }
logutils = { path = "libs/logutils", develop = true }
matplotlib = "^3.8.2"
navsim = { path = "libs/navsim", develop = true }
navtools = { path = "libs/navtools", develop = true }
numpy = "^1.26.4"
numba = "^0.58.1"
openpyxl = "^3.1.4"
pandas = "^2.1.1"
plotly = "^5.22.0"
seaborn = "^0.13.2"
scipy = "^1.12.0"
sympy = "^1.12"
yamlparser = { path = "libs/yamlparser", develop = true }
gdal = "^3.9.0"

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
